--- a/pages/dashboard-user.html
+++ b/pages/dashboard-user.html
@@ -6,6 +6,7 @@
     <title>My Account - Inker</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dashboard.css">
+    <link rel="stylesheet" href="../css/contact-widget.css">
 </head>
 <body>
     <nav class="navbar">
@@ -15,13 +16,16 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Find artist</a>
+                    <a href="find-styles.html" class="nav-link">Find styles</a>
+                </li>
+                <li class="nav-item">
+                    <a href="find-artists.html" class="nav-link">Find artist</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Messages</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Dashboard</a>
+                    <a href="dashboard-user.html" class="nav-link">Dashboard</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" id="logoutBtn" class="nav-button">Logout</a>
@@ -111,5 +115,6 @@
     <script src="../js/auth.js"></script>
     <script src="../js/database.js"></script>
     <script src="../js/dashboard-user.js"></script>
+    <script src="../js/contact-widget.js"></script>
 </body>
 </html>
