--- a/pages/dashboard-user.html
+++ b/pages/dashboard-user.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Account - Inker</title>
+    <title>Inker</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dashboard.css">
     <link rel="stylesheet" href="../css/contact-widget.css">
@@ -17,10 +17,10 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="find-styles.html" class="nav-link" data-nav="find-styles">Find styles</a>
+                    <a href="find-styles.html" class="nav-link" data-nav="find-styles">Styles</a>
                 </li>
                 <li class="nav-item">
-                    <a href="find-artists.html" class="nav-link" data-nav="find-artist">Find artist</a>
+                    <a href="find-artists.html" class="nav-link" data-nav="find-artist">Artist</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link" data-nav="messages">Messages</a>
@@ -126,15 +126,15 @@
             const currentLang = localStorage.getItem('language') || 'en';
             const translations = {
                 en: {
-                    'find-styles': 'Find styles',
-                    'find-artist': 'Find artist',
+                    'find-styles': 'Styles',
+                    'find-artist': 'Artist',
                     'messages': 'Messages',
                     'dashboard': 'Dashboard',
                     'logout': 'Logout'
                 },
                 es: {
-                    'find-styles': 'Buscar estilos',
-                    'find-artist': 'Buscar tatuador',
+                    'find-styles': 'Estilos',
+                    'find-artist': 'Tatuadores',
                     'messages': 'Mensajes',
                     'dashboard': 'Panel',
                     'logout': 'Cerrar sesión'
