--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Inker</title>
+    <title>Inker</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/auth.css">
     <link rel="stylesheet" href="../css/contact-widget.css">
@@ -17,16 +17,13 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="find-styles.html" class="nav-link" data-nav="find-styles">Find styles</a>
+                    <a href="find-styles.html" class="nav-link" data-nav="find-styles">Styles</a>
                 </li>
                 <li class="nav-item">
-                    <a href="find-artists.html" class="nav-link" data-nav="find-artist">Find artist</a>
+                    <a href="find-artists.html" class="nav-link" data-nav="find-artist">Artist</a>
                 </li>
                 <li class="nav-item">
-                    <a href="login.html" class="nav-link" data-nav="login">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a href="register.html" class="nav-button" data-nav="signup">Sign up</a>
+                    <a href="login.html" class="nav-button" data-nav="login">Login</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -68,7 +65,6 @@
                 </div>
                 
                 <button type="submit" class="auth-btn">
-                    <span class="btn-icon">→</span>
                     <span data-i18n="auth.signin-button">Sign in</span>
                 </button>
             </form>
