--- a/pages/register.html
+++ b/pages/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - Inker</title>
+    <title>Inker</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/auth.css">
     <link rel="stylesheet" href="../css/contact-widget.css">
@@ -17,16 +17,13 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="find-styles.html" class="nav-link" data-nav="find-styles">Find styles</a>
+                    <a href="find-styles.html" class="nav-link" data-nav="find-styles">Styles</a>
                 </li>
                 <li class="nav-item">
-                    <a href="find-artists.html" class="nav-link" data-nav="find-artist">Find artist</a>
+                    <a href="find-artists.html" class="nav-link" data-nav="find-artist">Artist</a>
                 </li>
                 <li class="nav-item">
-                    <a href="login.html" class="nav-link" data-nav="login">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a href="register.html" class="nav-button" data-nav="signup">Sign up</a>
+                    <a href="login.html" class="nav-button" data-nav="login">Login</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -96,12 +93,11 @@
                     <label class="checkbox-container">
                         <input type="checkbox" id="termsAgreement" required>
                         <span class="checkmark"></span>
-                        I agree to the <a href="#" class="terms-link">Terms of Service</a> and <a href="#" class="terms-link">Privacy Policy</a>
+                        I agree to the <a href="#" class="terms-link">&nbsp;Terms of Service&nbsp;</a>&nbsp;and&nbsp;<a href="#" class="terms-link"> Privacy Policy</a>
                     </label>
                 </div>
                 
                 <button type="submit" class="auth-btn">
-                    <span class="btn-icon">👤+</span>
                     <span data-i18n="auth.create-account-button">Create account</span>
                 </button>
             </form>
