--- a/pages/verify-email.html
+++ b/pages/verify-email.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verify Email - Inker</title>
+    <title>Inker</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/auth.css">
     <link rel="stylesheet" href="../css/contact-widget.css">
@@ -18,16 +18,13 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="find-styles.html" class="nav-link">Find styles</a>
+                    <a href="find-styles.html" class="nav-link">Styles</a>
                 </li>
                 <li class="nav-item">
-                    <a href="find-artists.html" class="nav-link">Find artist</a>
+                    <a href="find-artists.html" class="nav-link">Artist</a>
                 </li>
                 <li class="nav-item">
-                    <a href="login.html" class="nav-link">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a href="register.html" class="nav-button">Sign up</a>
+                    <a href="login.html" class="nav-button">Login</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -65,7 +62,6 @@
                         </p>
                     </div>
                     <button onclick="redirectToDashboard()" class="auth-btn">
-                        <span class="btn-icon">→</span>
                         Go to Login
                     </button>
                 </div>
