Mejorar Dashboard usuario

--- a/pages/artist-profile.html
+++ b/pages/artist-profile.html
@@ -232,28 +232,28 @@
                     <h2>Contact & Location</h2>
                     <div class="contact-info">
                         <div class="contact-item">
-                            <span class="contact-icon">📍</span>
+                            <img src="../images/comentario.png" alt="Location" class="contact-icon">
                             <div>
                                 <h4>Studio Address</h4>
                                 <p>123 Ink Street, New York, NY 10001</p>
                             </div>
                         </div>
                         <div class="contact-item">
-                            <span class="contact-icon">📞</span>
+                            <img src="../images/comentario.png" alt="Phone" class="contact-icon">
                             <div>
                                 <h4>Phone</h4>
                                 <p>+1 (555) 123-4567</p>
                             </div>
                         </div>
                         <div class="contact-item">
-                            <span class="contact-icon">✉️</span>
+                            <img src="../images/comentario.png" alt="Email" class="contact-icon">
                             <div>
                                 <h4>Email</h4>
                                 <p>alex@inkstudio.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
-                            <span class="contact-icon">🌐</span>
+                            <img src="../images/comentario.png" alt="Social Media" class="contact-icon">
                             <div>
                                 <h4>Social Media</h4>
                                 <div class="social-links">
